# WolfAndSheep

./: .gitignore  Data.hs  README.md  WolfAndSheep.cabal  state.hs
resources/: deadlock.txt  oneMoveBeforeSheepsVictory.txt  oneMoveBeforeWolfsVictory.txt  sheepWon.txt  wolfWon.txt
src/: AI.hs  Controller.hs  GUI.hs  Main.hs  MainMinMax.hs  Model.hs  View.hs
test/: Test.hs
