name:                WolfAndSheep
version:             0.1.0.0
homepage:            https://github.com/mon3/WolfAndSheep#readme
author:              mon3, mikolajczykmk
maintainer:          example@example.com
copyright:           2018 mon3, mikolajczykmk
category:            Game, AI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable WolfAndSheep
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Model, AI
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random >= 1.0,
                       time

executable gui
  hs-source-dirs:      src
  main-is:             View.hs
  other-modules:       Model, GUI
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random >= 1.0,
                       time,
                       ansi-terminal >=0.8.0.4
--  ghc-Options:         -Wall
